fixing the error that was created from the last fix for the error that we had with labels not showing when served on the server

--- a/client/main.css
+++ b/client/main.css
@@ -225,7 +225,7 @@ ul {
     height: 100% !important;
 }
 
-.active, label {
+.active, .label {
     background-color: rgba(163, 163, 163, 1);
     color: #f5f5f5;
 }
